--- a/frontend/src/components/LoadingBar/LoadingBar.css
+++ b/frontend/src/components/LoadingBar/LoadingBar.css
@@ -2,10 +2,10 @@
 
 .progress {
   --progress: 0%;
-  width: 80vw;        /* Set the width to be 80% of the viewport width */
-  min-width: 300px;   /* Ensure it's at least 300px wide, based on your initial code */
+  width: 80vw;        
+  min-width: 300px;   
   max-width: 800px; 
-  height: 50px;
+  height: 40px;
   margin: 9em auto;
   border: 1px solid #fff;
   border: 1px solid rgb(96, 96, 96);
@@ -50,4 +50,12 @@
   50% { box-shadow: 0 0 15px 5px orange; } */
   0%, 100% { box-shadow: 0 0 5px 3px rgba(255, 35, 35, 0.512); }
   50% { box-shadow: 0 0 5px 5px rgba(255, 35, 35, 0.512) }
+}
+
+
+@media screen and (max-width: 700px) {
+
+  .progress {
+    height: 20px;
+  }
 }
