--- a/frontend/src/components/TableClosedModal/TableClosedModal.css
+++ b/frontend/src/components/TableClosedModal/TableClosedModal.css
@@ -8,6 +8,8 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 450px;
   height: 120px;
+  max-width: 100vw;
+
 }
 
 
