--- a/frontend/src/components/ThemesModal/ThemesModal.css
+++ b/frontend/src/components/ThemesModal/ThemesModal.css
@@ -9,6 +9,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   flex-direction: column;
 
+  max-width: 100vw;
 
 }
 
@@ -16,6 +17,8 @@
 .themesmodal-header{
   width: 490px;
   height: 60px;
+  max-width: 100vw;
+
 
   font-size: min(25px, 5vw);
   color: white;
