--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,9 +35,17 @@ body{
   background-color: #282828fa;
 
   /* background: radial-gradient(circle, rgba(111,112,110,1) 0%, rgba(31,32,30,1) 100%); */
-  width: 100%;
+  width: 100vw;
   overflow-x: hidden;
+  overflow-y: scroll;
   height: 100%;
+
+  margin-top: 0;
+  padding-top: 0;
+  position: absolute;
+  left: -10px;
+
+
 }
 
 
